# hash-dude

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile.server  Dockerfile.slave  LICENSE  README.md  deny.toml  deploy.sh  docker-compose.yml
docker/: Dockerfile.monitor  Dockerfile.server  Dockerfile.server-ci  Dockerfile.slave  Dockerfile.slave-ci  Dockerfile.slave-slim  monitor.py
src/: alphabet.rs  index.html  main.rs  monitor.rs  msg.rs  server.rs  slave.rs
src/server/: to_dude.rs  to_slave.rs
