[package]
name = "hash-dude"
version = "0.1.0"
edition = "2018"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "slave"
path = "src/slave.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.2", features = ["ws", "headers"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
headers = "0.3"
tracing = "0.1"
tracing-subscriber = "0.2"
