[package]
name = "hash-dude"
version = "0.1.0"
edition = "2018"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "alphabet"
path = "src/alphabet.rs"

[[bin]]
name = "slave"
path = "src/slave.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.2", features = ["ws", "headers"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
headers = "0.3"
tracing = "0.1"
tracing-subscriber = "0.2"
tokio-tungstenite = "0.15"
url = "2"
futures-util = "0.3"
md-5 = "0.9"
hex = "0.4"

[profile.release]
lto = true
