[package]
name = "hash-dude"
version = "0.1.0"
edition = "2021"
default-run = "server"
license = "Apache-2.0"
authors = ["ityt <imran.tierce@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "alphabet"
path = "src/alphabet.rs"

[[bin]]
name = "slave"
path = "src/slave.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.4", features = ["ws", "headers"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
headers = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-tungstenite = "0.16"
url = "2"
futures-util = "0.3"
md-5 = "0.10"
hex = "0.4"
clap = { version = "3.0", features = ["derive"] }
mime = "0.3"

[profile.release]
lto = true
